<?xml version="1.0"?>
<package format="2">
    <name>pe_camerainfo_publisher</name>
    <version>1.0.0</version>
    <description>Perception Engine CameraInfo Publisher</description>

    <license>Apache 2.0</license>

    <author  email="abrahammonrroy@yahoo.com">Abraham Monrroy</author >
    <maintainer email="abrahammonrroy@yahoo.com">Abraham Monrroy</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>rosapi</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

</package>